<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/result"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/orange"
            android:textSize="30dp"
            android:text="0"/>
    </LinearLayout>
   <RelativeLayout
       android:id="@+id/allToolsContainer"
       android:weightSum="3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <LinearLayout
           android:layout_alignParentRight="true"
           android:layout_alignParentBottom="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="vertical">
           <androidx.appcompat.widget.SwitchCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:shadowColor="@color/black"
               android:rotation="90"
               android:layout_margin="10dp"
               android:theme="@style/BrandedSwitch"
               android:id="@+id/changeColorModeSwitch"
               />
           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_alignParentRight="true"
               android:src="@drawable/logo"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_alignParentRight="true"
           android:id="@+id/toolsLayout"
           android:layout_margin="7dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:weightSum="5"
           android:orientation="vertical"
           android:layout_alignParentEnd="true">


           <TextView
               android:id="@+id/plusTextView"
               android:layout_margin="5dp"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_gravity="center"
               android:textSize="20dp"
               android:background="@drawable/tools_text_view_design"
               android:fontFamily="sans-serif-medium"
               android:gravity="center"
               android:onClick="buttonClick"
               android:text="+"
               android:textColor="@color/orange" />
           <TextView
               android:id="@+id/subtractionTextView"
               android:layout_margin="5dp"
               android:background="@drawable/tools_text_view_design"
               android:onClick="buttonClick"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:text="-"
               android:textSize="20dp"
               android:fontFamily="sans-serif-medium"
               android:textColor="@color/orange"
               />
           <TextView
               android:id="@+id/multplicationTextView"
               android:textSize="20dp"
               android:layout_margin="5dp"
               android:background="@drawable/tools_text_view_design"
               android:onClick="buttonClick"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:text="*"
               android:fontFamily="sans-serif-medium"
               android:textColor="@color/orange"
               />
           <TextView
               android:id="@+id/divisonTextView"
               android:textSize="20dp"
               android:layout_margin="5dp"
               android:background="@drawable/tools_text_view_design"
               android:onClick="buttonClick"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:text="/"
               android:textColor="@color/orange"
               />
           <TextView
               android:id="@+id/resultEqualTextView"
               android:layout_margin="5dp"
               android:background="@drawable/tools_text_view_design"
               android:onClick="buttonClick"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_width="40dp"
               android:textSize="30dp"
               android:layout_height="40dp"
               android:text="="
               android:fontFamily="sans-serif-medium"
               android:textColor="@color/orange"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_marginTop="15dp"
           android:layout_toLeftOf="@id/toolsLayout"
           android:layout_alignParentLeft="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:padding="7dp"
               android:id="@+id/sNumber"
               android:inputType="number"
               android:background="@drawable/edite_text_background"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_margin="15dp"
               android:hint="please enter the second operand"
               android:layout_gravity="center"
               android:gravity="center"
               />

           <LinearLayout
               android:weightSum="2"
               android:gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_weight="1"
                   android:visibility="visible"
                   android:onClick="buttonClick"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="UNDO"
                   android:fontFamily="sans-serif-medium"
                   android:textColor="@color/orange"
                   android:padding="5dp"/>
               <TextView
                   android:layout_weight="1"
                   android:visibility="visible"
                   android:onClick="buttonClick"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="REDO"
                   android:fontFamily="sans-serif-medium"
                   android:textColor="@color/orange"
                   android:padding="5dp"/>
           </LinearLayout>
           <GridView

               android:id="@+id/gridView"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:numColumns="4"
               android:background="@color/white"/>
       </LinearLayout>
   </RelativeLayout>

</LinearLayout>